# tg2iterm2

./: .env.example  .gitignore  README.md  bot_app.py  config.py  install_hook.sh  iterm_controller.py  module_config.py  modules.yaml  permission_hook.py  pyproject.toml  run_tests.py  skill_scanner.py  telegram_client.py  telegram_format.py  tg2iterm2.py
adapters/: __init__.py  base.py  claude_adapter.py  cursor_adapter.py  opencode_adapter.py  shell_adapter.py
hooks/: __init__.py  claude_hook.py  cursor_hook.py  install_hooks.sh  permission_bridge.py
notebook/: __init__.py  handlers.py  manager.py  models.py  ui.py
reminder/: __init__.py  _tmp_add_reminder.py  handlers.py  manager.py  models.py  parser.py  reminder_cli.py  triggers.py  ui.py
